# lab_ros2

./: README.md
doc/: compile.md
perception/: cam_publisher.py  cam_subscriber.py  depth_subscriber.py  obj_detection.py  point_cloud.py  pose_array.py  stereo_aruco.py  zed_pcd.py
ros_kdl/: CMakeLists.txt  package.xml
ros_kdl/scripts/: kdlros.py  pykdl_kinematic.py  urdfkdl.py
ros_kdl/src/: kdl_robot.cpp
ros_pinocchio/: CMakeLists.txt  package.xml
ros_pinocchio/src/: pinocchio_example.cpp
ros_service/: CMakeLists.txt  package.xml
ros_service/src/: rclsrv_client.cpp  rclsrv_server.cpp
ros_sys/: CMakeLists.txt  package.xml
ros_sys/src/: ros_get_tf.cpp  ros_pub_tf.cpp  ros_tf.cpp
ros_topic/: CMakeLists.txt  package.xml
ros_topic/src/: rclpub.cpp  rclpub_num.cpp  rclsub.cpp  rclsub_num.cpp
ros_urdf/: CMakeLists.txt  package.xml
ros_urdf/urdf/: robot_macro.urdf.xacro  ur5e.urdf  ur5e_onsga.srdf  ur5e_onsga.urdf
ros_urdf_kdl/: CMakeLists.txt  package.xml
ros_urdf_kdl/scripts/: extract_urdf.py  kdlros.py  pykdl_kinematic.py  ur5e.urdf  ur5e_onsga.urdf  urdfkdl.py
ros_urdf_kdl/src/: kdl_robot.cpp
ros_urdf_kdl/urdf/: generate_urdf.sh  robot_macro.urdf  robot_macro.urdf.xacro  robot_view.launch.py
rosgeneral/: compose_multinode.py  joint_state_pub.py  moveit_fk_request.py  moveit_ik_request.py  rosduration.py  service_client.py  service_proxy.py  service_server.py
tools/: joint_record.py  move_to_config.py  move_to_config_action.py  tf_compute.py  tf_get.py  view_virtual_robot.launch.py
viz/: basic_controls.py  cube.py  menu.py  simple_marker.py
