<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_pinocchio</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuth@todo.com">yuth</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>ament_index_cpp</depend>
  <depend>Eigen3</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
